update backend to use cookie for jwt token